# facet

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  DEVELOP.md  Dockerfile  Justfile  README.md  README.md.in  depot.json  enum_fix.patch  flake.nix  release-plz.toml  rust-toolchain.toml  sample.rs  shell.nix  test_datetime_debug.rs  test_toml.rs
facet/: CHANGELOG.md  Cargo.toml  README.md
facet-args/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-args/src/: arg.rs  defaults.rs  error.rs  fields.rs  format.rs  lib.rs  parse.rs  results.rs
facet-args/tests/: defaults.rs  err.rs  parse.rs  sequence.rs  simple.rs  subspans.rs
facet-args/tests/snapshots/: err__error_bool_with_invalid_value_positional.snap  err__error_char_with_multiple_chars.snap  err__error_char_with_multiple_chars.snap.new  err__error_complex_nested_structure.snap  err__error_complex_nested_structure.snap.new  err__error_invalid_ip_address.snap  err__error_invalid_ip_address.snap.new  err__error_missing_value_for_argument.snap  err__error_missing_value_for_argument_short_eof.snap  err__error_missing_value_for_argument_short_missed.snap  (+17 more)
facet-bench/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-bench/benches/: canada.rs  json.rs
facet-bench/examples/: string_test.rs
facet-bench/src/: lib.rs
facet-bench/tests/: string_serialization.rs
facet-core/: CHANGELOG.md  Cargo.toml  README.md
facet-core/src/: impls_bytes.rs  impls_camino.rs  impls_chrono.rs  impls_jiff.rs  impls_ordered_float.rs  impls_time.rs  impls_ulid.rs  impls_url.rs  impls_uuid.rs  lib.rs  macros.rs  opaque.rs  ptr.rs  typeid.rs
facet-core/tests/: pointer.rs
facet-csv/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-csv/src/: lib.rs  serialize.rs
facet-csv/tests/: structs.rs
facet-derive/: CHANGELOG.md  Cargo.toml  README.md
facet-derive-emit/: CHANGELOG.md  Cargo.toml  README.md
facet-derive-emit/src/: attributes.rs  derive.rs  generics.rs  lib.rs  parsed.rs  process_enum.rs  process_struct.rs  renamerule.rs
facet-derive-emit/tests/: codegen.rs  compile_tests.rs  mod.rs
facet-derive-parse/: CHANGELOG.md  Cargo.toml  README.md
facet-derive-parse/src/: lib.rs
facet-derive/src/: lib.rs
facet-deserialize/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-deserialize-eventbased/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-deserialize-eventbased/src/: error.rs  span.rs
facet-deserialize/src/: debug.rs  error.rs  lib.rs  span.rs
facet-deserialize/tests/: input_types.rs
facet-dev/: Cargo.toml  README.md  absolve.sh
facet-dev/src/: fn_ptr.rs  header.md  main.rs  menu.rs  tuples.rs
facet-json/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-json/benches/: compare_serde.rs
facet-json/src/: deserialize.rs  json_serializer.rs  lib.rs  serialize.rs  tokenizer.rs
facet-json/tests/: arc.rs  array_test.rs  array_u64.rs  arrays.rs  bool.rs  boxed.rs  bytes.rs  camino.rs  chrono.rs  datetime.rs  deny_unknown_and_default.rs  diagnostics.rs  enum_struct_variants_test.rs  enum_unit_variants_test.rs  enum_variant_test.rs  enums.rs  eof_and_nulls.rs  err.rs  escapes.rs  hashmap.rs  issue_530_test.rs  map.rs  nonzero.rs  numbers.rs  option.rs  ordered-float.rs  primitives.rs  rename.rs  simple_array.rs  skip_serializing.rs  skip_unknown_fields.rs  string.rs  structs.rs  tenant-config.rs  transparent.rs  tuple.rs  ulid.rs  uuid.rs  vec.rs
facet-json3/: CHANGELOG.md  Cargo.toml  README.md
facet-json3/benches/: compare_serde.rs
facet-json3/src/: deserialize.rs  lib.rs
facet-jsonschema/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-jsonschema/src/: lib.rs
facet-kdl/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-kdl/src/: lib.rs
facet-kdl/tests/: basic.rs
facet-macros-emit/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-macros-emit/src/: derive.rs  generics.rs  lib.rs  parsed.rs  process_enum.rs  process_struct.rs  renamerule.rs
facet-macros-emit/tests/: mod.rs
facet-macros-parse/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-macros-parse/src/: lib.rs
facet-msgpack/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-msgpack/src/: deserialize.rs  errors.rs  from_msgpack.rs  lib.rs  serialize.rs  to_msgpack.rs
facet-msgpack/tests/: bool.rs  deny_unknown_and_default.rs  deserialize.rs  enums.rs  numbers.rs  primitives.rs  serialize.rs  tuple.rs
facet-pretty/: CHANGELOG.md  Cargo.toml  README.md
facet-pretty/benches/: compare_derive_more.rs
facet-pretty/examples/: basic_usage.rs
facet-pretty/src/: display.rs  printer.rs
facet-pretty/tests/: camino.rs  option_and_docs.rs  pretty_print.rs
facet-reflect/: CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  README.md.in  WIP_TODO.md
facet-reflect/src/: error.rs  lib.rs  scalar.rs
facet-reflect/tests/: compile_tests.rs  integration_tests.rs
facet-serialize/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-serialize/src/: debug_serializer.rs  lib.rs
facet-testhelpers/: CHANGELOG.md  Cargo.toml  README.md
facet-testhelpers-macros/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-testhelpers-macros/src/: lib.rs
facet-testhelpers/src/: lib.rs
facet-toml/: CHANGELOG.md  Cargo.toml  README.md
facet-toml/benches/: compare_serde.rs
facet-toml/src/: error.rs  lib.rs  serialize.rs  to_scalar.rs
facet-toml/tests/: benchmark_repro.rs  document.rs  enum_.rs  list.rs  map.rs  mod.rs  option.rs  option_test.rs  scalar.rs  struct_.rs  vec_array_of_tables.rs
facet-urlencoded/: CHANGELOG.md  Cargo.toml  README.md
facet-urlencoded/src/: lib.rs  tests.rs
facet-xdr/: CHANGELOG.md  Cargo.toml  README.md  README.md.in
facet-xdr/src/: lib.rs
facet-xdr/tests/: mod.rs
facet-yaml/: CHANGELOG.md  Cargo.toml  README.md
facet-yaml/src/: lib.rs
facet-yaml/tests/: datetime.rs  default.rs  from_str.rs  lists.rs  maps.rs  mod.rs  transparent.rs
facet/src/: lib.rs  sample_generated_code.rs
facet/tests/: cycle.rs  derive.rs  enums.rs  functions.rs  generics.rs  ordered_float.rs  value_vtable_facts.rs
(+872 files in other folders)
