[workspace]
members = [
    # core
    "facet-core",
    "facet",

    # derive macro
    "facet-derive-parse",
    "facet-derive-emit",
    "facet-derive",

    # reflection
    "facet-reflect",

    # dev helpers
    "facet-dev",

    # # test helpers
    "facet-testhelpers",

    # # formats / ecosystem
    "facet-args",
    "facet-csv",
    "facet-json",
    "facet-msgpack",
    "facet-serialize",
    "facet-pretty",
    "facet-toml",
    "facet-kdl",
    "facet-urlencoded",
    "facet-xdr",
    "facet-yaml",
    "facet-jsonschema",
    "facet-deserialize",
    "facet-bench", "facet-testhelpers-macros",
]
exclude = ["outside-workspace"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/facet-rs/facet"
