[package]
name = "facet-args"
version = "0.18.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line argument parsing for the facet ecosystem"
documentation = "https://docs.rs/facet-args"
keywords = ["cli", "args", "parser", "facet"]
categories = ["command-line-interface"]

[dependencies]
facet-reflect = { path = "../facet-reflect", version = "0.19.0" }
facet-core = { path = "../facet-core", version = "0.21.0" }
log = "0.4.27"

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-pretty = { path = "../facet-pretty" }
facet-testhelpers = { path = "../facet-testhelpers" }
