[package]
name = "facet-bench"
version = "0.23.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
divan = { version = "2.10.1", package = "codspeed-divan-compat" }
facet-json = { path = "../facet-json" }
facet-reflect = { path = "../facet-reflect", features = ["std"] }
xz2 = "0.1"

[[bench]]
name = "json"
harness = false

[[bench]]
name = "canada"
harness = false
