[package]
name = "facet-core"
version = "0.25.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for the facet ecosystem"
keywords = ["reflection", "core"]
categories = ["development-tools"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
camino = ["dep:camino", "alloc"]
ordered-float = ["dep:ordered-float"]
uuid = ["alloc", "dep:uuid"]
ulid = ["alloc", "dep:ulid"]
time = ["alloc", "dep:time"]
url = ["alloc", "dep:url"]
jiff = ["alloc", "dep:jiff"]

[dependencies]
url = { version = "2.5.4", optional = true, default-features = false }
impls = "1.0.3"
bitflags = "2.9.0"
camino = { version = "1", optional = true }
ordered-float = { version = "5.0.0", optional = true, default-features = false }
uuid = { version = "1.16.0", optional = true }
ulid = { version = "1.2.1", optional = true }
time = { version = "0.3.41", optional = true, features = [
    "parsing",
    "formatting",
] }
jiff = { version = "0.2.13", optional = true }

[dev-dependencies]
eyre = "0.6.12"
facet-testhelpers = { path = "../facet-testhelpers" }
