[package]
name = "facet-core"
version = "0.27.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types and traits for the facet ecosystem"
keywords = ["reflection", "core"]
categories = ["development-tools"]

[features]
default = ["std"]
# Enable standard library support
std = ["alloc"]
# Enable allocation support for no_std environments
alloc = []
# Provide Facet trait implementations for camino::Utf8Path and camino::Utf8PathBuf
camino = ["dep:camino", "alloc"]
# Provide Facet trait implementations for ordered_float types
ordered-float = ["dep:ordered-float"]
# Provide Facet trait implementations for uuid::Uuid
uuid = ["alloc", "dep:uuid"]
# Provide Facet trait implementations for ulid::Ulid
ulid = ["alloc", "dep:ulid"]
# Provide Facet trait implementations for time crate types
time = ["alloc", "dep:time"]
# Provide Facet trait implementations for chrono crate types
chrono = ["alloc", "dep:chrono"]
# Provide Facet trait implementations for url::Url
url = ["alloc", "dep:url"]
# Provide Facet trait implementations for jiff crate types
jiff02 = ["alloc", "dep:jiff"]
# Provide Facet trait implementations for bytes::Bytes
bytes = ["alloc", "dep:bytes"]

# Provide Facet trait implementations for tuples up to size 12. Without it,
# Facet is only implemented for tuples up to size 4.
tuples-12 = []

# Provide Facet trait implementations for function pointers.
fn-ptr = []

[dependencies]
url = { version = "2.5.4", optional = true, default-features = false }
impls = "1.0.3"
bitflags = "2.9.0"
camino = { version = "1", optional = true }
ordered-float = { version = "5.0.0", optional = true, default-features = false }
uuid = { version = "1.16.0", optional = true }
ulid = { version = "1.2.1", optional = true }
time = { version = "0.3.41", optional = true, features = [
    "parsing",
    "formatting",
] }
chrono = { version = "0.4", optional = true, default-features = false, features = [
    "alloc",
    "clock",
] }
jiff = { version = "0.2.13", optional = true }
bytes = { version = "1.10.1", optional = true, default-features = false }

[dev-dependencies]
eyre = "0.6.12"
facet-testhelpers = { path = "../facet-testhelpers" }
