[package]
name = "facet-derive-emit"
version = "0.18.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macro for emitting derived 'Facet' trait code in facet"
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "derive",
]
categories = ["development-tools", "encoding"]

[features]
slow-tests = [] # Enable slow tests (compile tests)

[dependencies]
facet-derive-parse = { version = "0.18.1", path = "../facet-derive-parse" }

[dev-dependencies]
insta = { git = "https://github.com/mitsuhiko/insta" }
rust-format = { version = "0.3.4", features = ["proc-macro2", "token_stream"] }
owo-colors = { version = "4.2.0" }
tempfile = { version = "3.19.1" }
