[package]
name = "facet-derive-parse"
version.workspace = true
authors = ["Amos Wenger <amos@bearcove.eu>", "Lukas Wirth <lukastw97@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser support for facet-derive's macro expansion"
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "derive",
]
categories = ["development-tools", "encoding"]

[dependencies]
unsynn = "0.0.26"
