[package]
name = "facet-derive-parse"
version = "0.26.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parser support for facet-derive's macro expansion"
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "derive",
]
categories = ["development-tools", "encoding"]

[dependencies]
unsynn = "0.1.0"
