[package]
name = "facet-deserialize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Event-based approach to deserialization for the facet ecosystem"
keywords = ["serialization", "deserialization", "reflection", "types"]
categories = [
    "encoding",
    "data-structures",
    "development-tools",
    "parsing",
    "no-std",
]

[features]
std = []
default = ["std", "rich-diagnostics"]
ariadne = ["dep:ariadne"]
rich-diagnostics = ["dep:ariadne", "std"]

[dependencies]
ariadne = { version = "0.5.1", optional = true }
facet-core = { version = "0.21.0", path = "../facet-core" }
facet-reflect = { version = "0.19.0", path = "../facet-reflect" }
log = "0.4.27"
owo-colors = "4.2.0"

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = "0.17.0"
