[package]
name = "facet-deserialize"
version = "0.24.10"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Event-based approach to deserialization for the facet ecosystem"
keywords = ["serialization", "deserialization", "reflection", "types"]
categories = [
    "encoding",
    "data-structures",
    "development-tools",
    "parsing",
    "no-std",
]

[features]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]
std = ["alloc"]
ariadne = ["alloc", "dep:ariadne"]
rich-diagnostics = ["ariadne", "std"]
default = ["std", "rich-diagnostics"]

[dependencies]
ariadne = { version = "0.5.1", optional = true }
facet-core = { version = "0.27.4", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.27.4", path = "../facet-reflect", default-features = false }
log = "0.4.27"
owo-colors = "4.2.0"

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = "0.17.0"
