[package]
name = "facet-dev"
publish = false
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal development utilities for Facet"
keywords = ["code-generation", "templates"]
categories = ["development-tools"]

[dependencies]
ctrlc = "3.4.6"
facet-testhelpers = { version = "0.17.2", path = "../facet-testhelpers" }
fs-err = "3.1.0"
indicatif = "0.17.11"
log = "0.4.27"
similar = { version = "2.7.0", features = ["inline"] }
yansi = "1.0.1"

[target.'cfg(not(windows))'.dependencies]
termion = "4.0.5"
