[package]
name = "facet-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A JSON deserializer and serializer for the facet ecosystem"
keywords = ["json", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parser-implementations"]

[features]
std = ["facet-core/std", "alloc"]                         # Uses libstd and alloc
alloc = ["facet-core/alloc"]                              # Enables alloc support
rich-diagnostics = ["facet-deserialize/rich-diagnostics"]
default = ["std", "rich-diagnostics"]

[dependencies]
facet-core = { version = "0.21.0", path = "../facet-core" }
facet-deserialize = { version = "0.22.0", path = "../facet-deserialize" }
facet-reflect = { version = "0.19.0", path = "../facet-reflect" }
facet-serialize = { version = "0.22.0", path = "../facet-serialize" }
log = "0.4.27"

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = "1.43.1"
