[package]
name = "facet-json3"
version = "0.20.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON serialization and deserialization support for Facet traits"
keywords = ["facet", "json", "serialization", "deserialization"]
categories = ["encoding", "development-tools"]

[features]
std = ["facet-core/std", "facet-reflect/std", "alloc"] # Uses libstd and alloc
alloc = ["facet-core/alloc", "facet-reflect/alloc"]    # Enables alloc support
rich-diagnostics = ["dep:ariadne", "std"]
default = ["std", "rich-diagnostics"]
camino = ["alloc", "facet-core/camino"]                # Enable camino support
ordered-float = ["alloc", "facet-core/ordered-float"]
uuid = ["alloc", "facet-core/uuid"]
ulid = ["alloc", "facet-core/ulid"]

[dependencies]
ariadne = { version = "=0.5.1", optional = true }
facet-core = { version = "0.20.0", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.18.2", path = "../facet-reflect", default-features = false }
facet-serialize = { version = "0.21.0", path = "../facet-serialize" }
facet-deserialize-externally-driven = { version = "0.21.0", path = "../facet-deserialize-externally-driven" }
log = "0.4.27"
owo-colors = "4.2.0"

[dev-dependencies]
camino = "1.1.9"
eyre = "0.6.12"
uuid = "1.16.0"
ulid = "1.2.1"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = "1.43.1"
ordered-float = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
divan = { version = "2.10.1", package = "codspeed-divan-compat" }
