[package]
name = "facet-jsonschema"
version = "0.23.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate JSON Schema from Facet types. Provides a `to_string` function to get a JSON Schema representation as a string. Useful for reflection, introspection, serialization, and deserialization."
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "json-schema",
]
categories = ["development-tools", "encoding"]

[dependencies]
facet-core = { version = "0.26.1", path = "../facet-core" }
facet-derive = { version = "0.26.1", path = "../facet-derive" }

[dev-dependencies]
insta = "1.43.1"
facet = { path = "../facet" }
