[package]
name = "facet-kdl"
publish = false # can't publish as long as we have a git dependency on kdl
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["Brooks Rady <b.j.rady@gmail.com", "Amos Wenger <amos@bearcove.eu>"]
description = "KDL serialization and deserialization for Facet types"
keywords = ["kdl", "serialization", "deserialization", "reflection", "facet"]
categories = ["encoding", "parsing", "data-structures"]

[features]
std = ["alloc", "facet-core/std", "facet-reflect/std"]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]
default = ["std"]

[dependencies]
log = "0.4.27"
facet-core = { version = "0.21.1", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.19.1", path = "../facet-reflect", default-features = false }
kdl = { git = "https://github.com/TheLostLambda/kdl-rs.git", branch = "free-of-syn" }

[dev-dependencies]
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
indoc = "2.0.6"
