[package]
name = "facet-macros-emit"
version = "0.27.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macro for emitting derived 'Facet' trait code in facet"
keywords = [
    "reflection",
    "introspection",
    "serialization",
    "deserialization",
    "derive",
]
categories = ["development-tools", "encoding"]

[features]
slow-tests = [] # Enable slow tests (compile tests)
function = ["facet-macros-parse/function"]

[dependencies]
facet-macros-parse = { version = "0.27.12", path = "../facet-macros-parse" }
quote = "1.0.40"

[dev-dependencies]
insta = { version = "1.43.1" }
rust-format = { version = "0.3.4", features = ["proc-macro2", "token_stream"] }
owo-colors = { version = "4.2.0" }
tempfile = { version = "3.19.1" }
