[package]
name = "facet-msgpack"
version = "0.25.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MessagePack serialization and deserialization for Facet types"
keywords = [
    "msgpack",
    "serialization",
    "deserialization",
    "reflection",
    "facet",
]
categories = ["encoding", "parsing", "data-structures"]

[dependencies]
facet-core = { version = "0.27.3", path = "../facet-core" }
facet-reflect = { version = "0.27.3", path = "../facet-reflect" }
log = "0.4.27"
facet-serialize = { version = "0.24.4", path = "../facet-serialize" }

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = "1.43.1"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
