[package]
name = "facet-pretty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pretty-printing for types implementing the Facet trait"
keywords = [
    "pretty-print",
    "formatting",
    "reflection",
    "serialization",
    "visualization",
]
categories = ["development-tools", "visualization", "command-line-utilities"]

[dependencies]
facet-core = { version = "0.19.0", path = "../facet-core" }
facet-reflect = { version = "0.18.1", path = "../facet-reflect" }
yansi = "1.0.1"

[dev-dependencies]
facet = { path = "../facet" }
criterion = "0.5.1"

[[bench]]
path = "benches/compare_derive_more.rs"
name = "compare_derive_more"
harness = false
