[package]
name = "facet-pretty"
version = "0.23.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pretty-printing for types implementing the Facet trait"
keywords = [
    "pretty-print",
    "formatting",
    "reflection",
    "serialization",
    "visualization",
]
categories = ["development-tools", "visualization", "command-line-utilities"]

[features]
alloc = ["facet-core/alloc", "facet-reflect/alloc"] # Enables alloc support
camino = ["alloc", "facet-core/camino"]

[dependencies]
facet-core = { version = "0.27.0", path = "../facet-core" }
facet-reflect = { version = "0.27.0", path = "../facet-reflect" }
yansi = "1.0.1"

[dev-dependencies]
camino = "1.1.9"
facet = { path = "../facet" }
divan = { version = "2.10.1", package = "codspeed-divan-compat" }

[[bench]]
path = "benches/compare_derive_more.rs"
name = "compare_derive_more"
harness = false
