[package]
name = "facet-reflect"
version = "0.27.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Allows peeking (reading from) and poking (writing to) types that implement Facet"
keywords = ["reflection", "introspection", "facet", "peek", "poke"]
categories = ["development-tools", "rust-patterns"]

[features]
default = ["std"]
std = ["alloc"] # Enable the standard library features
alloc = [
    "owo-colors/alloc",
    "facet-core/alloc",
] # Enable the allocation features
log = [
    "dep:log",
] # Enable logging of reflection operations (mostly for internal development)
slow-tests = [] # Enable slow tests (compile tests)
camino = [
    "alloc",
    "dep:camino",
    "facet-core/camino",
] # Enable Facet implementation for camino path types
uuid = [
    "alloc",
    "dep:uuid",
    "facet-core/uuid",
] # Enable Facet implementation for UUID types
ulid = [
    "alloc",
    "dep:ulid",
    "facet-core/ulid",
] # Enable Facet implementation for ULID types
time = ["facet-core/time"] # Enable Facet implementation for time types
jiff02 = ["facet-core/jiff02"] # Enable Facet implementation for jiff 0.2 types
fn-ptr = [
    "facet-core/fn-ptr",
] # Enable Facet implementation for function pointers

[dependencies]
bitflags = "2.9.0"
facet-core = { path = "../facet-core", version = "0.27.12", default-features = false }
log = { version = "0.4.27", optional = true }
owo-colors = { version = "4.2.0" }
camino = { version = "1", optional = true }
uuid = { version = "1.16.0", optional = true }
ulid = { version = "1.2.1", optional = true }

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = "1.43.1"
log = "0.4.27"
tempfile = "3.19.1"
