[package]
name = "facet-serialize"
version = "0.24.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic serializer for facet"
keywords = ["facet", "serialization", "deserialization"]
categories = ["encoding", "development-tools"]

[features]
default = ["std"]
std = ["alloc"]
alloc = ["facet-core/alloc", "facet-reflect/alloc"]

[dependencies]
facet-core = { version = "0.27.0", path = "../facet-core", default-features = false }
facet-reflect = { version = "0.27.0", path = "../facet-reflect", default-features = false }
log = "0.4.27"

[dev-dependencies]
eyre = "0.6.12"
facet = { path = "../facet" }
facet-testhelpers = { path = "../facet-testhelpers" }
insta = "1.43.1"
