[package]
name = "facet-testhelpers-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["testing", "helpers", "utilities"]
categories = ["development-tools::testing", "development-tools"]
description = "Proc macro for facet-testhelpers"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
unsynn = "0.1.1"
